--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,51 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Program to display the Fibonacci sequence up to n-th term\n",
-    "\n",
-    "nterms = int(input(\"How many terms? \"))\n",
-    "\n",
-    "# first two terms\n",
-    "n1, n2 = 0, 1\n",
-    "count = 0"
+    "def removeDuplicates(nums):\n",
+    "    temp = []\n",
+    "    for i in nums:\n",
+    "        if i not in temp:\n",
+    "            temp.append(i)\n",
+    "    nums = temp\n",
+    "    return len(temp), nums\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [11,22,22,33,33,44,44]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(4, [11, 22, 33, 44])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "while count < nterms:\n",
-    "    print(n1)\n",
-    "    x = n1 +n2\n",
-    "    n1 = n2\n",
-    "    n2 = x\n",
-    "    count +=1"
+    "removeDuplicates(nums)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
