commnit on 'master'

--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,54 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def removeDuplicates(nums):\n",
-    "    temp = []\n",
-    "    for i in nums:\n",
-    "        if i not in temp:\n",
-    "            temp.append(i)\n",
-    "    nums = temp\n",
-    "    return len(temp), nums\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = [11,22,22,33,33,44,44]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, [11, 22, 33, 44])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "removeDuplicates(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def lcp(arr):\n",
+    "    if len(arr) == 0:\n",
+    "        return \"\"\n",
+    "    elif len(arr) == 1:\n",
+    "        return arr[0]\n",
+    "    else:\n",
+    "        for i in arr:\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
