--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -2,7 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class Node:\n",
+    "#     def __init__(self,data,next):\n",
+    "#         self.data = data\n",
+    "#         self.next = next\n",
+    "\n",
+    "# class LinkedList:\n",
+    "#     def __init__(self):\n",
+    "#         self.head = None\n",
+    "\n",
+    "#     def insatbeg(self,data):\n",
+    "#         node = Node(data,self.head)\n",
+    "#         self.head = node\n",
+    "\n",
+    "#     def insatend(self,data):\n",
+    "#         if self.head == None:\n",
+    "#             self.head = Node(data,None)\n",
+    "#             return\n",
+    "        \n",
+    "#         else:\n",
+    "#             itr = self.head\n",
+    "            \n",
+    "\n",
+    "#             while itr.next:\n",
+    "\n",
+    "#                 itr = itr.next\n",
+    "\n",
+    "#             itr.next = Node(data,None)   \n",
+    "#             return \n",
+    "\n",
+    "# # insatend loop will stop at a node before the itr.next = None\n",
+    "# # then the line itr = itr.next will push it to the final node\n",
+    "# # then we will set its next ie new last element as the new final/ending node with next = None\n",
+    "\n",
+    "#     def insert_values(self,data_list):\n",
+    "#         self.head  == None\n",
+    "\n",
+    "#         for data in data_list:\n",
+    "#             self.insatend(data)\n",
+    "\n",
+    "\n",
+    "#     def get_length(self):\n",
+    "#         count = 0\n",
+    "#         itr = self.head\n",
+    "#         while itr:\n",
+    "#             itr = itr.next\n",
+    "#             count += 1\n",
+    "#         print(count)\n",
+    "#         return\n",
+    "\n",
+    "    \n",
+    "#     def remove_at(self,index):\n",
+    "#         count = 0\n",
+    "#         itr = self.head\n",
+    "\n",
+    "#         while itr:\n",
+    "            \n",
+    "#             itr = itr.next\n",
+    "#             count += 1\n",
+    "\n",
+    "#             if count == index - 1:\n",
+    "#                 itr.next = itr.next.next\n",
+    "\n",
+    "    \n",
+    "#     def insat(self,data,index):\n",
+    "#         count = 0\n",
+    "#         itr = self.head\n",
+    "\n",
+    "#         while itr:\n",
+    "#             itr = itr.next\n",
+    "#             count +=1\n",
+    "\n",
+    "#             if count == index - 1:\n",
+    "#                 itr.next = Node(data,itr.next)\n",
+    "\n",
+    "\n",
+    "#     def printll(self):\n",
+    "#         if self.head == None:\n",
+    "#             return 'linked list is empty baka'\n",
+    "\n",
+    "#         else:\n",
+    "#             itr = self.head\n",
+    "#             ll = ''\n",
+    "#             while itr:\n",
+    "#                 ll += str(itr.data) + '---->'\n",
+    "#                 itr = itr.next\n",
+    "#             print(ll)\n",
+    "\n",
+    "#             return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +106,6 @@
     "    def __init__(self,data,next):\n",
     "        self.data = data\n",
     "        self.next = next\n",
-    "\n",
     "class LinkedList:\n",
     "    def __init__(self):\n",
     "        self.head = None\n",
@@ -18,7 +113,7 @@
     "    def insatbeg(self,data):\n",
     "        node = Node(data,self.head)\n",
     "        self.head = node\n",
-    "\n",
+    "    \n",
     "    def insatend(self,data):\n",
     "        if self.head == None:\n",
     "            self.head = Node(data,None)\n",
@@ -27,71 +122,66 @@
     "        else:\n",
     "            itr = self.head\n",
     "            \n",
-    "\n",
     "            while itr.next:\n",
-    "\n",
     "                itr = itr.next\n",
     "\n",
     "            itr.next = Node(data,None)   \n",
-    "            return \n",
-    "\n",
-    "# insatend loop will stop at a node before the itr.next = None\n",
-    "# then the line itr = itr.next will push it to the final node\n",
-    "# then we will set its next ie new last element as the new final/ending node with next = None\n",
+    "            return\n",
+    "    \n",
+    "    def printll(self):\n",
+    "        itr =  self.head\n",
+    "        ll = ''\n",
+    "        while itr:\n",
+    "            ll += str(itr.data) + '--->'\n",
+    "            itr = itr.next\n",
+    "        print(ll)\n",
     "\n",
     "    def insert_values(self,data_list):\n",
-    "        self.head  == None\n",
-    "\n",
+    "        self.head = None\n",
     "        for data in data_list:\n",
     "            self.insatend(data)\n",
-    "\n",
-    "\n",
-    "    def get_length(self):\n",
-    "        count = 0\n",
-    "        itr = self.head\n",
-    "        while itr:\n",
-    "            itr = itr.next\n",
-    "            count += 1\n",
-    "        print(count)\n",
-    "        return\n",
-    "\n",
     "    \n",
-    "    def remove_at(self,index):\n",
-    "        count = 0\n",
+    "    def get_length(self):\n",
     "        itr = self.head\n",
-    "\n",
+    "        count = 0\n",
     "        while itr:\n",
-    "            \n",
+    "            count+=1\n",
     "            itr = itr.next\n",
-    "            count += 1\n",
+    "        print(count)\n",
+    "        return count\n",
     "\n",
-    "            if count == index - 1:\n",
-    "                itr.next = itr.next.next\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def printll(self):\n",
+    "    def insat(self,data,index):\n",
     "        if self.head == None:\n",
-    "            return 'linked list is empty baka'\n",
+    "            return 'empty linked list baka'\n",
+    "        \n",
+    "        else:\n",
+    "            count = 0\n",
+    "            itr =  self.head\n",
+    "            while itr:\n",
+    "                count +=1\n",
+    "                itr = itr.next\n",
+    "                if count == index-1:\n",
+    "                    itr.next = Node(data,itr.next)\n",
+    "            return\n",
+    "\n",
+    "    def remove_at(self,index):\n",
+    "        if self.head ==None:\n",
+    "            return 'empty linked list baka'\n",
     "\n",
     "        else:\n",
+    "            count = 0\n",
     "            itr = self.head\n",
-    "            ll = ''\n",
     "            while itr:\n",
-    "                ll += str(itr.data) + '---->'\n",
+    "                count+=1\n",
     "                itr = itr.next\n",
-    "            print(ll)\n",
-    "\n",
-    "            return"
+    "                if count == index -1:\n",
+    "                    itr.next = itr.next.next \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.insat('new insertion',2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ona---->cona---->dona---->lona---->\n"
+      "ona--->cona--->new insertion--->dona--->lona--->\n"
      ]
     }
    ],
@@ -136,15 +235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "5\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
