commit on 'master'

--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +176,30 @@
     "                itr = itr.next\n",
     "                if count == index -1:\n",
     "                    itr.next = itr.next.next \n",
-    "\n"
+    "\n",
+    "    def insafterval(self,val,dat):\n",
+    "        itr = self.head\n",
+    "        while itr:\n",
+    "            itr = itr.next\n",
+    "            if itr.data == val:\n",
+    "                itr.next = Node(dat,itr.next)\n",
+    "\n",
+    "                break\n",
+    "            \n",
+    "        return\n",
+    "\n",
+    "    def remove_by_val(self,val):\n",
+    "        itr = self.head\n",
+    "        while itr.next:\n",
+    "            if itr.next.data == val:\n",
+    "                itr.next = itr.next.next\n",
+    "                break\n",
+    "            itr = itr.next\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +269,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
