--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lpadsdiap\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = input(\"sentence\")\n",
+    "i = i.lower()\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def lcp(arr):\n",
-    "    if len(arr) == 0:\n",
-    "        return \"\"\n",
-    "    elif len(arr) == 1:\n",
-    "        return arr[0]\n",
-    "    else:\n",
-    "        for i in arr:\n",
-    "            "
-   ]
+   "source": []
   }
  ],
  "metadata": {
