--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,21 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lpadsdiap\n"
+      "cba\n"
      ]
     }
    ],
    "source": [
-    "i = input(\"sentence\")\n",
-    "i = i.lower()\n",
-    "print(i)"
+    "s = 'abc'\n",
+    "str = ''\n",
+    "\n",
+    "for i in s:\n",
+    "    str = i+str\n",
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = 0 \n",
+    "n2 = 1\n",
+    "\n",
+    "t =10\n",
+    "i = 0\n",
+    "\n",
+    "while i<10:\n",
+    "    nth = n1 +n2\n",
+    "    n1 = n2\n",
+    "    n2 = nth\n",
+    "    i+=1\n",
+    "print(n1)"
    ]
   },
   {
@@ -46,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
