--- a/rough.ipynb
+++ b/rough.ipynb
@@ -2,52 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cba\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = 'abc'\n",
-    "str = ''\n",
+    "class Node:\n",
+    "    def __init__(self,data,next):\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
     "\n",
-    "for i in s:\n",
-    "    str = i+str\n",
-    "print(str)"
+    "class Linkedlist:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def insatbeg(self,data):\n",
+    "        node = Node(data,self.head)\n",
+    "        self.head = node\n",
+    "    \n",
+    "    def insatend(self,data):\n",
+    "        \n",
+    "\n",
+    "        if self.head == None:\n",
+    "            self.head = Node(data,None)\n",
+    "            return\n",
+    "        else:\n",
+    "            itr = self.head\n",
+    "            while itr:   \n",
+    "                if itr.next == None:\n",
+    "                    itr.next = Node(data,None)\n",
+    "        \n",
+    "        itr = itr.next\n",
+    "    def print(self):\n",
+    "        itr = self.head\n",
+    "        ll = ''\n",
+    "        while itr:\n",
+    "            ll += str(itr.data)+'--->'\n",
+    "            itr = itr.next\n",
+    "        print(ll)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = Linkedlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.insatbeg(23)\n",
+    "x.insatbeg(24)\n",
+    "x.insatbeg(25)\n",
+    "x.insatbeg(26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55\n"
+      "26--->25--->24--->23--->\n"
      ]
     }
    ],
    "source": [
-    "n1 = 0 \n",
-    "n2 = 1\n",
-    "\n",
-    "t =10\n",
-    "i = 0\n",
-    "\n",
-    "while i<10:\n",
-    "    nth = n1 +n2\n",
-    "    n1 = n2\n",
-    "    n2 = nth\n",
-    "    i+=1\n",
-    "print(n1)"
+    "x.print()"
    ]
   },
   {
@@ -77,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
