linked list bna diya thida thoda refresh hua sabkuch

--- a/2023/arrays.ipynb
+++ b/2023/arrays.ipynb
@@ -28,6 +28,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "7150\n",
+      "False\n",
+      "[2200, 2350, 2600, 2130, 2190, 1980]\n",
+      "[2200, 2350, 2600, 1930, 2190, 1980]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(expenses[1]-expenses[0])\n",
+    "print(expenses[0]+expenses[1]+expenses[2])\n",
+    "print(2000 in expenses)\n",
+    "\n",
+    "expenses.append(1980)\n",
+    "print(expenses)\n",
+    "\n",
+    "expenses[3] = expenses[3]-200\n",
+    "print(expenses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
