reversing a linked list

--- a/2023/linkedlist.ipynb
+++ b/2023/linkedlist.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,17 @@
     "                itr.next = itr.next.next\n",
     "                return\n",
     "            itr = itr.next\n",
+    "\n",
+    "    def reversal(self):\n",
+    "        itr = self.head\n",
+    "        prev =None\n",
+    "        while itr:\n",
+    "            nxt = itr.next\n",
+    "            itr.next = prev\n",
+    "            prev = itr\n",
+    "            itr = nxt\n",
+    "        self.head =  prev\n",
+    "            \n",
     "            \n",
     "    \n",
     "    \n",
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,20 +279,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll.reversal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first-->second-->last-->\n"
+      "last-->third-->second-->first-->\n"
      ]
     }
    ],
    "source": [
     "print(ll.printll())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
