multithreadin and some queue use

--- a/2025forPM/collectionsqueue.ipynb
+++ b/2025forPM/collectionsqueue.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "687dcda7",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "        return self.queue[0]\n",
     "    \n",
     "    def isempty(self):\n",
-    "        return (self.queue.size() == 0)\n",
+    "        return (len(self.queue) == 0)\n",
     "    \n",
     "    def size(self):\n",
     "        return len(self.queue)"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "f8aff380",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "017db4fe",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "deque([10, 9, 8, 7, 6, 5, 4, 3, 2, 1])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,20 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2e531558",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'queue' object has no attribute 'pop'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mq\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m()\n\u001b[32m      2\u001b[39m q.queue\n",
-      "\u001b[31mAttributeError\u001b[39m: 'queue' object has no attribute 'pop'"
-     ]
+     "data": {
+      "text/plain": [
+       "deque([10, 9, 8, 7, 6, 5, 4, 3, 2])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "95cf79d0",
    "metadata": {},
    "outputs": [
@@ -128,7 +127,7 @@
        "10"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bbfb5741",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.isempty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550add23",
    "metadata": {},
    "outputs": [],
    "source": []
